targetsdk compilesdk升级到30, 移除权限申请模块解决其导致的编译错误

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 android {
-    compileSdk 29
+    compileSdk 30
 
     signingConfigs {
         liowmark {
@@ -51,14 +51,21 @@ android {
 
 dependencies {
 
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // 使用兼容 SDK 30 的旧版本库
+    implementation 'androidx.appcompat:appcompat:1.3.0'       // 支持 SDK 30 的最高版本
+    implementation 'com.google.android.material:material:1.4.0' // 支持 SDK 30 的稳定版
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4' // 兼容旧版 SDK
+
+    // 保持原有测试框架版本
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     // 权限请求框架：https://github.com/getActivity/XXPermissions
-    implementation 'com.github.getActivity:XXPermissions:18.6'
+    implementation 'com.github.getActivity:XXPermissions:21.0'
+
+    // 添加必要降级依赖
+    implementation 'androidx.core:core:1.6.0'
+
 
 }
